--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,6 +61,12 @@
         "variant": "cpp",
         "format": "cpp"
     },
-    "C_Cpp.errorSquiggles": "disabled"
+    "C_Cpp.errorSquiggles": "disabled",
+    "github.copilot.enable": {
+        "*": true,
+        "plaintext": false,
+        "markdown": false,
+        "scminput": false
+    }
 
 }
